[package]
name = "const-enum-tools"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Trait definitions for working with enums at compile time using macros."
authors = ["Tiger"]
repository = "https://github.com/tigergold59/const-enum-tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
